<resources>
    <string name="app_name">Tutor-online</string>
    <string name="auth_title_text_view">Авторизация</string>
    <string name="user_enter_name_hint">введите логин</string>
    <string name="user_enter_password_edit_text">введите пароль</string>
    <string name="user_sign_in_button_text">Войти</string>
    <string name="my_profile">Профиль</string>
    <string name="lesson_list">Все занятия</string>
    <string name="my_lesson_list">Мои занятия</string>
    <string name="lesson">Занятие</string>
    <string name="request_lesson">Запрос на занятие</string>
    <string name="test_user_name">Тестовый пользователь</string>
    <string name="test_status">Студент</string>
    <string name="test_age">22</string>
    <string name="test_main">Почта</string>
    <string name="empty_lessons_list">Занятия отсутствуют</string>
    <string name="request_on_lesson">Записаться</string>
    <string name="cancel_lesson_request">Отменить запись</string>
    <string name="success_request">Вы успешно записаны</string>
    <string name="cancelled_request">Вы отменили запрос на урок</string>
    <string name="cancel_lesson">Отменить урок</string>
    <string name="accept_lesson">Принять урок</string>
    <string name="delete_lesson_button_text">Удалить урок</string>
    <string name="create_lesson_button_text">Создать урок</string>
    <string name="create_lesson">Создать урок</string>
    <string name="enter_lesson_data_title">Введите данные урока</string>
    <string name="create_lesson_title_hint">Название урока</string>
    <string name="create_lesson_description_hint">Описание урока</string>
    <string name="create_lesson_contact_data">Данные для связи</string>
    <string name="register_button_text">Зарегистрироваться</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="register">Регистрация</string>
    <string name="register_title">Введите данные аккаунта</string>
    <string name="register_name">Имя</string>
    <string name="register_age">Возраст</string>
    <string name="register_phone">Номер телефона</string>
    <string name="register_email">Email</string>
    <string name="tutor">Преподаватель</string>
    <string name="student">Студент</string>
    <string name="register_is_tutor_switch">Я преподаватель</string>
    <string name="register_password">Пароль</string>
    <string name="my_profile_log_out">Выйти из аккаунта</string>
</resources>