<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.RegisterFragment">

    <TextView
        android:id="@+id/register_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/register_title_text_view">

        <EditText
            android:id="@+id/register_name_edit_text"
            android:hint="@string/register_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="19dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_age_edit_text"
            android:hint="@string/register_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_below="@+id/register_name_edit_text"/>

        <EditText
            android:id="@+id/register_phone_edit_text"
            android:hint="@string/register_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:inputType="phone"
            android:layout_below="@id/register_age_edit_text" />

        <EditText
            android:id="@+id/register_email_edit_text"
            android:hint="@string/register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_below="@id/register_phone_edit_text" />

        <EditText
            android:id="@+id/register_password_edit_text"
            android:hint="@string/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_below="@id/register_email_edit_text" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/register_is_tutor_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_is_tutor_switch"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_below="@id/register_password_edit_text"/>

        <Button
            android:id="@+id/accept_create_button_lesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/create_account"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/register_is_tutor_switch"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>