<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lesson_list_navigation_graph"
    app:startDestination="@id/lessonListFragment">

    <fragment
        android:id="@+id/lessonListFragment"
        android:name="com.example.tutor_online.ui.fragment.LessonListFragment"
        android:label="@string/lesson_list"
        tools:layout="@layout/lesson_list_fragment" >
        <action
            android:id="@+id/action_lessonListFragment_to_lessonFragment"
            app:destination="@id/lessonFragment" />
        <action
            android:id="@+id/action_lessonListFragment_to_createLessonFragment2"
            app:destination="@id/createLessonFragment" />
    </fragment>

    <fragment
        android:id="@+id/lessonFragment"
        android:name="com.example.tutor_online.ui.fragment.LessonFragment"
        android:label="@string/lesson"
        tools:layout="@layout/lesson_fragment">
    </fragment>

    <fragment
        android:id="@+id/createLessonFragment"
        android:name="com.example.tutor_online.ui.fragment.CreateLessonFragment"
        android:label="@string/create_lesson"
        tools:layout="@layout/create_lesson_fragment">
    </fragment>

</navigation>